// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <div
      style="flex: 1;"
    />
    <div>
      <div>
        <div
          class="t-anchor t-size-m"
        >
          <div
            class="t-anchor_line"
          >
            <div
              class="point"
              style=""
            />
          </div>
          <div
            class="t-anchor-item"
          >
            <a
              class="t-anchor-item_link"
              href="#基础锚点"
              title="基础锚点"
            >
              基础锚点
            </a>
          </div>
          <div
            class="t-anchor-item"
          >
            <a
              class="t-anchor-item_link"
              href="#多级锚点"
              title="多级锚点"
            >
              多级锚点
            </a>
          </div>
          <div
            class="t-anchor-item"
          >
            <a
              class="t-anchor-item_link"
              href="#指定容器锚点"
              title="指定容器锚点"
            >
              指定容器锚点
            </a>
          </div>
          <div
            class="t-anchor-item"
          >
            <a
              class="t-anchor-item_link"
              href="#特定交互锚点"
              title="特定交互锚点"
            >
              特定交互锚点
            </a>
          </div>
          <div
            class="t-anchor-item"
          >
            <a
              class="t-anchor-item_link"
              href="#尺寸"
              title="尺寸"
            >
              尺寸
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`container.jsx 1`] = `
<DocumentFragment>
  <div
    class="anchor-demo-attach"
    id="attach"
    style="display: flex;"
  >
    <div
      class="t-anchor t-size-m"
    >
      <div
        class="t-anchor_line"
      >
        <div
          class="point"
          style="top: 0px; height: 0px;"
        />
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#content-1"
          title="content-1"
        >
          content-1
        </a>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#content-2"
          title="content-2"
        >
          content-2
        </a>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#content-3"
          title="content-3"
        >
          content-3
        </a>
      </div>
      <div
        class="t-anchor-item t-is-active"
      >
        <a
          class="t-anchor-item_link"
          href="#content-4"
          title="content-4"
        >
          content-4
        </a>
      </div>
    </div>
    <div
      id="anchor-container"
      style="width: 100%; height: 200px; overflow: auto; text-align: center; font-size: 22px;"
    >
      <div
        id="content-1"
        style="background: rgb(223, 239, 255); line-height: 100px;"
      >
        content-1
      </div>
      <div
        id="content-2"
        style="background: rgb(191, 219, 247); line-height: 100px;"
      >
        content-2
      </div>
      <div
        id="content-3"
        style="background: rgb(155, 197, 242); line-height: 100px;"
      >
        content-3
      </div>
      <div
        id="content-4"
        style="background: rgb(123, 175, 237); line-height: 100px;"
      >
        content-4
      </div>
      <div
        id="content-5"
        style="background: rgb(92, 153, 235); line-height: 100px;"
      >
        content-5
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large.jsx 1`] = `
<DocumentFragment>
  <div
    id="size-large"
  >
    <div
      class="t-anchor t-size-m"
    >
      <div
        class="t-anchor_line"
      >
        <div
          class="point"
          style="top: 0px; height: 0px;"
        />
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#default"
          title="基础锚点"
        >
          基础锚点
        </a>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#multiple"
          title="多级锚点"
        >
          多级锚点
        </a>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#size"
          title="尺寸大小"
        >
          尺寸大小
        </a>
        <div
          class="t-anchor-item"
        >
          <a
            class="t-anchor-item_link"
            href="#size"
            title="size-medium"
          >
            size-medium
          </a>
        </div>
        <div
          class="t-anchor-item t-is-active"
        >
          <a
            class="t-anchor-item_link"
            href="#size-large"
            title="size-large"
          >
            size-large
          </a>
        </div>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#attach"
          title="指定容器"
        >
          指定容器
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`multiple.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-anchor t-size-m"
  >
    <div
      class="t-anchor_line"
    >
      <div
        class="point"
        style=""
      />
    </div>
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#基础锚点"
        title="基础锚点"
      >
        基础锚点
      </a>
    </div>
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#多级锚点"
        title="多级锚点"
      >
        多级锚点
      </a>
    </div>
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#指定容器锚点"
        title="指定容器锚点"
      >
        指定容器锚点
      </a>
    </div>
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#特定交互锚点"
        title="特定交互锚点"
      >
        特定交互锚点
      </a>
    </div>
    <div
      class="t-anchor-item"
    >
      <a
        class="t-anchor-item_link"
        href="#尺寸"
        title="尺寸"
      >
        尺寸
      </a>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#size"
          title="size-medium"
        >
          size-medium
        </a>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#size-large"
          title="size-large"
        >
          size-large
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small.jsx 1`] = `
<DocumentFragment>
  <div
    id="size"
  >
    <div
      class="t-anchor t-size-m"
    >
      <div
        class="t-anchor_line"
      >
        <div
          class="point"
          style="top: 0px; height: 0px;"
        />
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#default"
          title="基础锚点"
        >
          基础锚点
        </a>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#multiple"
          title="多级锚点"
        >
          多级锚点
        </a>
      </div>
      <div
        class="t-anchor-item t-is-active"
      >
        <a
          class="t-anchor-item_link"
          href="#size"
          title="尺寸大小"
        >
          尺寸大小
        </a>
        <div
          class="t-anchor-item t-is-active"
        >
          <a
            class="t-anchor-item_link"
            href="#size"
            title="size-medium"
          >
            size-medium
          </a>
        </div>
        <div
          class="t-anchor-item"
        >
          <a
            class="t-anchor-item_link"
            href="#size-large"
            title="size-large"
          >
            size-large
          </a>
        </div>
      </div>
      <div
        class="t-anchor-item"
      >
        <a
          class="t-anchor-item_link"
          href="#attach"
          title="指定容器"
        >
          指定容器
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`target.jsx 1`] = `
<DocumentFragment>
  <div
    class="anchor-demo"
    id="/components/anchor/#anchor-target"
  >
    <h1
      class="t-anchor-target"
      id="/components/anchor/#default"
    >
      基础锚点
      <svg
        class="t-icon t-icon-file-copy t-copy"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M768 896L768 960 192 960C156.653776 960 128 931.3462208 128 896L128 256 192 256 192 896 768 896ZM639.64761472 63.955432256C656.6034176 63.953462528 672.8670592 70.68011648 684.8677696 82.65852288L877.2127168 274.64597952C889.2408064 286.651712 896 302.94840384 896 319.94288832L896 768C896 803.3462208 867.3462208 832 832 832L320 832C284.653776 832 256 803.3462208 256 768L256 128C256.00743552 92.65667968 284.65668032 64.00410624 319.99999936 63.992565248L639.64761472 63.955432256ZM576 128L320 128 320 768 832 768 832 383.95543168 576 384 576 128ZM640 128L640 320 832 320 640 128Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </h1>
    <h1
      class="t-anchor-target"
      id="/components/anchor/#multiple"
    >
      多级锚点
      <svg
        class="t-icon t-icon-file-copy t-copy"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M768 896L768 960 192 960C156.653776 960 128 931.3462208 128 896L128 256 192 256 192 896 768 896ZM639.64761472 63.955432256C656.6034176 63.953462528 672.8670592 70.68011648 684.8677696 82.65852288L877.2127168 274.64597952C889.2408064 286.651712 896 302.94840384 896 319.94288832L896 768C896 803.3462208 867.3462208 832 832 832L320 832C284.653776 832 256 803.3462208 256 768L256 128C256.00743552 92.65667968 284.65668032 64.00410624 319.99999936 63.992565248L639.64761472 63.955432256ZM576 128L320 128 320 768 832 768 832 383.95543168 576 384 576 128ZM640 128L640 320 832 320 640 128Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </h1>
    <h1
      class="t-anchor-target"
      id="/components/anchor/#size"
    >
      尺寸大小
      <svg
        class="t-icon t-icon-file-copy t-copy"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M768 896L768 960 192 960C156.653776 960 128 931.3462208 128 896L128 256 192 256 192 896 768 896ZM639.64761472 63.955432256C656.6034176 63.953462528 672.8670592 70.68011648 684.8677696 82.65852288L877.2127168 274.64597952C889.2408064 286.651712 896 302.94840384 896 319.94288832L896 768C896 803.3462208 867.3462208 832 832 832L320 832C284.653776 832 256 803.3462208 256 768L256 128C256.00743552 92.65667968 284.65668032 64.00410624 319.99999936 63.992565248L639.64761472 63.955432256ZM576 128L320 128 320 768 832 768 832 383.95543168 576 384 576 128ZM640 128L640 320 832 320 640 128Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </h1>
    <h1
      class="t-anchor-target"
      id="/components/anchor/#attach"
    >
      指定容器
      <svg
        class="t-icon t-icon-file-copy t-copy"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M768 896L768 960 192 960C156.653776 960 128 931.3462208 128 896L128 256 192 256 192 896 768 896ZM639.64761472 63.955432256C656.6034176 63.953462528 672.8670592 70.68011648 684.8677696 82.65852288L877.2127168 274.64597952C889.2408064 286.651712 896 302.94840384 896 319.94288832L896 768C896 803.3462208 867.3462208 832 832 832L320 832C284.653776 832 256 803.3462208 256 768L256 128C256.00743552 92.65667968 284.65668032 64.00410624 319.99999936 63.992565248L639.64761472 63.955432256ZM576 128L320 128 320 768 832 768 832 383.95543168 576 384 576 128ZM640 128L640 320 832 320 640 128Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </h1>
  </div>
</DocumentFragment>
`;
